# EdgeDetectionViewer

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: .gitignore  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  EdgeDetector.cpp  EdgeDetector.h  native-lib.cpp
app/src/main/java/com/example/edgedetectionviewer/: MainActivity.kt
app/src/main/java/com/example/edgedetectionviewer/gl/: CameraRenderer.kt
app/src/main/java/com/example/edgedetectionviewer/processors/: NativeProcessor.kt
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  package.json  style.css
web/src/: FrameViewer.js  main.js
